# coqpilot-client-tactic

./: .gitignore  README.md  coqpilot.opam  coqpilot.opam.template  dune-project
_build/: .db  .digest-db  log
_build/default/: META.coqpilot  coqpilot.dune-package  coqpilot.install
_build/default/.dune/: configurator  configurator.v2
_build/default/src/: coqpilot_client_plugin.cma  coqpilot_client_plugin.cmxa  coqpilot_client_plugin.cmxs  coqpilot_client_plugin.ml-gen  coqpilot_tactics.ml  coqpilot_tactics.mlg  message.ml
_build/default/src/.coqpilot_client_plugin.objs/: coqpilot_client_plugin__Coqpilot_tactics.impl.all-deps  coqpilot_client_plugin__Coqpilot_tactics.impl.d  coqpilot_client_plugin__Message.impl.d  coqpilot_client_plugin__Message.intf.d
_build/default/src/.coqpilot_client_plugin.objs/byte/: coqpilot_client_plugin.cmi  coqpilot_client_plugin.cmo  coqpilot_client_plugin.cmt  coqpilot_client_plugin__Coqpilot_tactics.cmi  coqpilot_client_plugin__Coqpilot_tactics.cmo  coqpilot_client_plugin__Coqpilot_tactics.cmt  coqpilot_client_plugin__Message.cmi  coqpilot_client_plugin__Message.cmo  coqpilot_client_plugin__Message.cmt  coqpilot_client_plugin__Message.cmti
_build/default/src/.coqpilot_client_plugin.objs/native/: coqpilot_client_plugin.cmx  coqpilot_client_plugin__Coqpilot_tactics.cmx  coqpilot_client_plugin__Message.cmx
_build/default/src/.merlin-conf/: lib-coqpilot.tactics-plugin
_build/default/tests/: .CoqPilotTests.theory.d  .test.aux  test.glob  test.vo
_build/default/theories/: .Coqpilot.theory.d  .Tactics.aux  Tactics.glob  Tactics.vo
_build/install/default/lib/coqpilot/: META  dune-package  opam
_build/install/default/lib/coqpilot/tactics-plugin/: coqpilot_client_plugin.cma  coqpilot_tactics.ml  (+15 more)
src/: api.ml  api.mli  coqpilot_client_plugin.mlpack  coqpilot_tactics.mlg  dune  get_random_joke.ml  get_random_joke.mli
tests/: dune  test.v  test_client.v  test_server.v
theories/: Tactics.v  dune
(+4 files in other folders)
